Add back to homepage button to login-signup, change userActionButton to div

--- a/frontend/html/login-signup/index.html
+++ b/frontend/html/login-signup/index.html
@@ -7,6 +7,7 @@
         <script src="/dist/login-signup.js" type="module"></script>
     </head>
     <body>
+        <div class="homePageButton" onclick="window.location.href='/'">Back to homepage</div>
         <div id="root"></div>
     </body>
 </html>
