Change login-signup.css to userStuff.css to be more descriptive

--- a/frontend/html/verify/index.html
+++ b/frontend/html/verify/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Verify email</title>
         <link rel="stylesheet" href="/css/homeShared.css" type="text/css">
-        <link rel="stylesheet" href="/css/login-signup.css" type="text/css">
+        <link rel="stylesheet" href="/css/userStuff.css" type="text/css">
         <script src="/dist/verify.js" type="module"></script>
     </head>
     <body>
