--- a/frontend/html/login-signup/index.html
+++ b/frontend/html/login-signup/index.html
@@ -3,7 +3,7 @@
     <head>
         <title id="title"></title>
         <link rel="stylesheet" href="/css/homeShared.css" type="text/css">
-        <link rel="stylesheet" href="/css/login-signup.css" type="text/css">
+        <link rel="stylesheet" href="/css/userStuff.css" type="text/css">
         <script src="/dist/login-signup.js" type="module"></script>
     </head>
     <body>
