Get the forgot password page going

--- a/frontend/html/forgotpassword/index.html
+++ b/frontend/html/forgotpassword/index.html
@@ -4,6 +4,7 @@
         <title id="title">Forgot password</title>
         <link rel="stylesheet" href="/css/homeShared.css" type="text/css">
         <link rel="stylesheet" href="/css/userStuff.css" type="text/css">
+        <script src="/dist/forgotpassword.js" type="module"></script>
     </head>
     <body>
         <div class="backButtonContainer">
