Now able to reset passwords

--- a/frontend/html/passwordreset/index.html
+++ b/frontend/html/passwordreset/index.html
@@ -3,7 +3,7 @@
     <head>
         <title id="title">Reset password</title>
         <link rel="stylesheet" href="/css/homeShared.css" type="text/css">
-        <link rel="stylesheet" href="/css/userStuffs.css" type="text/css">
+        <link rel="stylesheet" href="/css/userStuff.css" type="text/css">
         <script src="/dist/passwordreset.js" type="module"></script>
     </head>
     <body>
