--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -46,6 +46,10 @@
                     </div>
                 </div>
             </div>
+            <div class="bottomContainer">
+                <h1 class="sectionName">Contact</h1>
+                <p>If you need anything you can contact me at <a href="mailto:jacob@todandlorna.com">jacob@todandlorna.com</a></p>
+            </div>
         </div>
     </body>
 </html>
