Add burger reviews project

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -47,6 +47,10 @@
                             <!--The above text appears as ʷaᵥeʸ sₒuⁿdₛ.-->
                             <p>An arduino/rust program that I built to play 12 notes based on data read from a linear softpot.</p>
                         </div>
+                        <div class="projectContent" onclick="window.location.href='/burgerreviews'">
+                            <h2 class="projectName">Burger Reviews</h2>
+                            <p>A way to review burgers and compare by deliciousness and price.</p>
+                        </div>
                     </div>
                 </div>
             </div>
