fix: add Corndogs to projects

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -51,6 +51,10 @@
                             <h2 class="projectName">Burger Reviews</h2>
                             <p>A way to review burgers and compare by deliciousness and price.</p>
                         </div>
+                        <div class="projectContent" onclick="window.location.href='https://github.com/TnLCommunity/corndogs'">
+                            <h2 class="projectName">Corndogs</h2>
+                            <p>Corndogs is a Cloud Native background task state manager. It's a bit like python's celery, but highly scalable and language agnostic.</p>
+                        </div>
                     </div>
                 </div>
             </div>
