--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -19,7 +19,7 @@
             <div class="projects">
                 <h1 class="sectionName">Projects</h1>
                 <div class="sectionContent">
-                    <h2>I've worked on a few projects at this point. You'll find them here.</h2>
+                    <h2>I've worked on a few projects at this point. You'll find some of them here.</h2>
                     <div class="projectContainer">
                         <div class="projectContent" onclick="window.location.href='https://phonejanitor.com'">
                             <h2 class="projectName">Phone Janitor</h2>
